--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple HTML, CSS, and JavaScript Example</title>
+    <title>French Articles Quiz</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Simple Page!</h1>
-    <button id="colorButton">Change Background Color</button>
+    <div class="container">
+        <h1>French Articles Quiz</h1>
+        <div id="quiz-container">
+            <div id="question-container">
+                <h2 id="question">Loading question...</h2>
+                <div id="options-container">
+                    <!-- Options will be dynamically added here -->
+                </div>
+            </div>
+            <div id="timer-container">
+                <span id="timer">10</span> seconds left
+            </div>
+            <button id="next-button" class="hidden">Next Question</button>
+        </div>
+    </div>
+
+    <!-- Donate Section -->
+    <div class="donate-section">
+        <h2>Please Donate</h2>
+        <p>Your support helps us maintain this platform and continue offering free education.</p>
+        <div class="donate-info">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSX1j8_1o20igEk7AJyDYrJ_cH3dBXBr6jwuw&usqp=CAU" alt="Wave Logo" class="wave-logo">
+            <p>Phone Number: <strong>3709558</strong></p>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
