--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
 
     .equation {
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
       align-items: center;
       margin: 20px 0;
-      font-size: 1.5em;
+      font-size: 1.2em;
+      flex-wrap: nowrap;
+      overflow-x: auto;
     }
 
     .equation img {
-      width: 60px;
-      height: 60px;
+      width: 50px;
+      height: 50px;
       object-fit: cover;
-      margin: 10px;
-      border-radius: 10px;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+      margin: 0 5px;
+      border-radius: 6px;
     }
 
     .symbol, .question {
-      margin: 10px;
+      margin: 0 5px;
       font-weight: bold;
-      font-size: 2em;
+      font-size: 1.5em;
     }
 
     .question {
@@ -52,15 +52,21 @@
 
     @media (min-width: 600px) {
       .equation img {
-        width: 80px;
-        height: 80px;
+        width: 60px;
+        height: 60px;
+      }
+      .symbol, .question {
+        font-size: 1.8em;
       }
     }
 
     @media (min-width: 900px) {
       .equation img {
-        width: 100px;
-        height: 100px;
+        width: 70px;
+        height: 70px;
+      }
+      .symbol, .question {
+        font-size: 2em;
       }
     }
   </style>
@@ -70,31 +76,31 @@
   <h1>Can You Solve This?</h1>
 
   <div class="equation">
-    <img src="https://via.placeholder.com/100?text=A" alt="Image 1">
+    <img src="https://via.placeholder.com/70?text=A" alt="Image 1">
     <span class="symbol">+</span>
-    <img src="https://via.placeholder.com/100?text=B" alt="Image 2">
+    <img src="https://via.placeholder.com/70?text=B" alt="Image 2">
     <span class="symbol">=</span>
-    <img src="https://via.placeholder.com/100?text=C" alt="Image 3">
+    <img src="https://via.placeholder.com/70?text=C" alt="Image 3">
   </div>
 
   <div class="equation">
-    <img src="https://via.placeholder.com/100?text=A" alt="Image 1">
+    <img src="https://via.placeholder.com/70?text=A" alt="Image 1">
     <span class="symbol">+</span>
-    <img src="https://via.placeholder.com/100?text=C" alt="Image 3">
+    <img src="https://via.placeholder.com/70?text=C" alt="Image 3">
     <span class="symbol">+</span>
-    <img src="https://via.placeholder.com/100?text=B" alt="Image 2">
+    <img src="https://via.placeholder.com/70?text=B" alt="Image 2">
     <span class="symbol">=</span>
-    <img src="https://via.placeholder.com/100?text=D" alt="Image 4">
+    <img src="https://via.placeholder.com/70?text=D" alt="Image 4">
   </div>
 
   <div class="equation">
-    <img src="https://via.placeholder.com/100?text=D" alt="Image 4">
+    <img src="https://via.placeholder.com/70?text=D" alt="Image 4">
     <span class="symbol">+</span>
-    <img src="https://via.placeholder.com/100?text=B" alt="Image 2">
+    <img src="https://via.placeholder.com/70?text=B" alt="Image 2">
     <span class="symbol">+</span>
-    <img src="https://via.placeholder.com/100?text=A" alt="Image 1">
+    <img src="https://via.placeholder.com/70?text=A" alt="Image 1">
     <span class="symbol">+</span>
-    <img src="https://via.placeholder.com/100?text=C" alt="Image 3">
+    <img src="https://via.placeholder.com/70?text=C" alt="Image 3">
     <span class="symbol">=</span>
     <span class="question">?</span>
   </div>
