--- a/index.html
+++ b/index.html
@@ -7,102 +7,171 @@
   <style>
     * {
       box-sizing: border-box;
+      margin: 0;
+      padding: 0;
     }
 
     body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      margin: 0;
-      padding: 20px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #f6d365 0%, #fda085 100%);
+      background-size: 400% 400%;
+      animation: gradientBG 10s ease infinite;
+      padding: 10px;
       text-align: center;
     }
 
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .puzzle-container {
+      position: relative;
+      display: inline-block;
+      background: rgba(255, 255, 255, 0.95);
+      padding: 20px;
+      border-radius: 15px;
+      border: 2px solid #ddd;
+      max-width: 100%;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    }
+
     h1 {
-      font-size: 2em;
-      margin-bottom: 30px;
+      font-size: 1.8em;
+      margin-bottom: 20px;
+      color: #222;
+      text-shadow: 1px 1px 2px #fff;
     }
 
     .equation {
       display: flex;
       justify-content: center;
       align-items: center;
-      margin: 20px 0;
-      font-size: 1.2em;
+      margin: 10px 0;
       flex-wrap: nowrap;
       overflow-x: auto;
+      background: linear-gradient(270deg, #ffecd2, #fcb69f);
+      background-size: 400% 400%;
+      border-radius: 10px;
+      padding: 10px;
+      animation: equationGradient 6s ease infinite;
+    }
+
+    @keyframes equationGradient {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     .equation img {
       width: 50px;
       height: 50px;
       object-fit: cover;
-      margin: 0 5px;
+      margin: 0 4px;
       border-radius: 6px;
+      box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
     }
 
     .symbol, .question {
-      margin: 0 5px;
+      margin: 0 4px;
       font-weight: bold;
-      font-size: 1.5em;
+      font-size: 1.6em;
+      color: #000;
     }
 
     .question {
-      color: #d9534f;
+      color: #e74c3c;
+      animation: pulse 1.5s infinite;
     }
 
-    @media (min-width: 600px) {
-      .equation img {
-        width: 60px;
-        height: 60px;
-      }
-      .symbol, .question {
-        font-size: 1.8em;
-      }
+    @keyframes pulse {
+      0% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.2); opacity: 0.7; }
+      100% { transform: scale(1); opacity: 1; }
     }
 
-    @media (min-width: 900px) {
-      .equation img {
-        width: 70px;
-        height: 70px;
+    .embedded-watermark {
+      position: absolute;
+      bottom: 5px;
+      right: 5px;
+      display: flex;
+      align-items: center;
+      background-color: rgba(255, 255, 255, 0.85);
+      padding: 2px 6px;
+      border-radius: 6px;
+      font-size: 0.7em;
+      opacity: 0.9;
+      box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
+    }
+
+    .embedded-watermark img {
+      width: 14px;
+      height: 14px;
+      margin-right: 4px;
+    }
+
+    .embedded-watermark a {
+      color: #0088cc;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.4em;
       }
+
+      .equation img {
+        width: 40px;
+        height: 40px;
+      }
+
       .symbol, .question {
-        font-size: 2em;
+        font-size: 1.2em;
       }
     }
   </style>
 </head>
 <body>
 
-  <h1>Can You Solve This?</h1>
+  <div class="puzzle-container">
+    <h1>Can You Solve This?</h1>
 
-  <div class="equation">
-    <img src="https://via.placeholder.com/70?text=A" alt="Image 1">
-    <span class="symbol">+</span>
-    <img src="https://via.placeholder.com/70?text=B" alt="Image 2">
-    <span class="symbol">=</span>
-    <img src="https://via.placeholder.com/70?text=C" alt="Image 3">
-  </div>
+    <div class="equation">
+      <img src="https://via.placeholder.com/70?text=A" alt="Image 1">
+      <span class="symbol">+</span>
+      <img src="https://via.placeholder.com/70?text=B" alt="Image 2">
+      <span class="symbol">=</span>
+      <img src="https://via.placeholder.com/70?text=C" alt="Image 3">
+    </div>
 
-  <div class="equation">
-    <img src="https://via.placeholder.com/70?text=A" alt="Image 1">
-    <span class="symbol">+</span>
-    <img src="https://via.placeholder.com/70?text=C" alt="Image 3">
-    <span class="symbol">+</span>
-    <img src="https://via.placeholder.com/70?text=B" alt="Image 2">
-    <span class="symbol">=</span>
-    <img src="https://via.placeholder.com/70?text=D" alt="Image 4">
-  </div>
+    <div class="equation">
+      <img src="https://via.placeholder.com/70?text=A" alt="Image 1">
+      <span class="symbol">+</span>
+      <img src="https://via.placeholder.com/70?text=C" alt="Image 3">
+      <span class="symbol">+</span>
+      <img src="https://via.placeholder.com/70?text=B" alt="Image 2">
+      <span class="symbol">=</span>
+      <img src="https://via.placeholder.com/70?text=D" alt="Image 4">
+    </div>
 
-  <div class="equation">
-    <img src="https://via.placeholder.com/70?text=D" alt="Image 4">
-    <span class="symbol">+</span>
-    <img src="https://via.placeholder.com/70?text=B" alt="Image 2">
-    <span class="symbol">+</span>
-    <img src="https://via.placeholder.com/70?text=A" alt="Image 1">
-    <span class="symbol">+</span>
-    <img src="https://via.placeholder.com/70?text=C" alt="Image 3">
-    <span class="symbol">=</span>
-    <span class="question">?</span>
+    <div class="equation">
+      <img src="https://via.placeholder.com/70?text=D" alt="Image 4">
+      <span class="symbol">+</span>
+      <img src="https://via.placeholder.com/70?text=B" alt="Image 2">
+      <span class="symbol">+</span>
+      <img src="https://via.placeholder.com/70?text=A" alt="Image 1">
+      <span class="symbol">+</span>
+      <img src="https://via.placeholder.com/70?text=C" alt="Image 3">
+      <span class="symbol">=</span>
+      <span class="question">?</span>
+    </div>
+
+    <div class="embedded-watermark">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+      <a href="https://t.me/mathrushchannel" target="_blank">@MathRushChannel</a>
+    </div>
   </div>
 
 </body>
