--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
 
   <div class="puzzle-container">
     <h1>Can You Solve This?</h1>
-
+<div class="embedded-watermark">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+      <a href="https://t.me/mathrushchannel" target="_blank">@MathRushChannel</a>
+    </div>
     <div class="equation">
       <img src="https://via.placeholder.com/70?text=A" alt="Image 1">
       <span class="symbol">+</span>
