--- a/index.html
+++ b/index.html
@@ -7,20 +7,32 @@
   <style>
     * {
       box-sizing: border-box;
-      margin: 0;
-      padding: 0;
     }
 
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #f6d365 0%, #fda085 100%);
-      background-size: 400% 400%;
-      animation: gradientBG 10s ease infinite;
-      padding: 10px;
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      margin: 0;
+      padding: 20px;
       text-align: center;
+      position: relative;
+      overflow: hidden;
     }
 
-    @keyframes gradientBG {
+    /* Dynamic Gradient Background */
+    .background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(45deg, #6a5acd, #ff6347, #32cd32, #00bfff);
+      background-size: 400% 400%;
+      animation: gradientBackground 10s ease infinite;
+      z-index: -1;
+    }
+
+    @keyframes gradientBackground {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
@@ -29,118 +41,114 @@
     .puzzle-container {
       position: relative;
       display: inline-block;
-      background: rgba(255, 255, 255, 0.95);
+      background: white;
       padding: 20px;
-      border-radius: 15px;
-      border: 2px solid #ddd;
-      max-width: 100%;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
     h1 {
-      font-size: 1.8em;
-      margin-bottom: 20px;
-      color: #222;
-      text-shadow: 1px 1px 2px #fff;
+      font-size: 2em;
+      margin-bottom: 30px;
     }
 
     .equation {
       display: flex;
       justify-content: center;
       align-items: center;
-      margin: 10px 0;
+      margin: 20px 0;
+      font-size: 1.2em;
       flex-wrap: nowrap;
       overflow-x: auto;
-      background: linear-gradient(270deg, #ffecd2, #fcb69f);
-      background-size: 400% 400%;
-      border-radius: 10px;
-      padding: 10px;
-      animation: equationGradient 6s ease infinite;
-    }
-
-    @keyframes equationGradient {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
     }
 
     .equation img {
       width: 50px;
       height: 50px;
       object-fit: cover;
-      margin: 0 4px;
+      margin: 0 5px;
       border-radius: 6px;
-      box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
     }
 
     .symbol, .question {
-      margin: 0 4px;
+      margin: 0 5px;
       font-weight: bold;
-      font-size: 1.6em;
-      color: #000;
+      font-size: 1.5em;
     }
 
     .question {
-      color: #e74c3c;
-      animation: pulse 1.5s infinite;
+      color: #d9534f;
     }
 
-    @keyframes pulse {
-      0% { transform: scale(1); opacity: 1; }
-      50% { transform: scale(1.2); opacity: 0.7; }
-      100% { transform: scale(1); opacity: 1; }
+    @media (min-width: 600px) {
+      .equation img {
+        width: 60px;
+        height: 60px;
+      }
+
+      .symbol, .question {
+        font-size: 1.8em;
+      }
     }
 
+    @media (min-width: 900px) {
+      .equation img {
+        width: 70px;
+        height: 70px;
+      }
+
+      .symbol, .question {
+        font-size: 2em;
+      }
+    }
+
+    /* Embedded Watermark Styling */
     .embedded-watermark {
       position: absolute;
-      bottom: 5px;
-      right: 5px;
       display: flex;
       align-items: center;
-      background-color: rgba(255, 255, 255, 0.85);
-      padding: 2px 6px;
+      background-color: rgba(255, 255, 255, 0.6);
+      padding: 4px 8px;
       border-radius: 6px;
-      font-size: 0.7em;
-      opacity: 0.9;
-      box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
+      font-size: 0.85em;
+      opacity: 0.7;
+      z-index: 1000;
+      pointer-events: none;
     }
 
     .embedded-watermark img {
-      width: 14px;
-      height: 14px;
-      margin-right: 4px;
+      width: 18px;
+      height: 18px;
+      margin-right: 6px;
     }
 
     .embedded-watermark a {
       color: #0088cc;
       text-decoration: none;
-      font-weight: 600;
+      font-weight: bold;
     }
 
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 1.4em;
-      }
-
-      .equation img {
-        width: 40px;
-        height: 40px;
-      }
-
-      .symbol, .question {
-        font-size: 1.2em;
-      }
+    .embedded-watermark a:hover {
+      text-decoration: underline;
     }
+
+    /* Randomly placed multiple instances of watermark */
+    .watermark-1 { top: 10px; left: 20px; }
+    .watermark-2 { top: 150px; left: 80px; }
+    .watermark-3 { top: 50%; right: 20px; transform: translateY(-50%); }
+    .watermark-4 { bottom: 20px; left: 150px; }
+    .watermark-5 { top: 65%; right: 30px; transform: translateY(-50%); }
+    .watermark-6 { top: 85%; left: 100px; }
+
   </style>
 </head>
 <body>
 
+  <div class="background"></div>
+
   <div class="puzzle-container">
     <h1>Can You Solve This?</h1>
-<div class="embedded-watermark">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
-      <a href="https://t.me/mathrushchannel" target="_blank">@MathRushChannel</a>
-    </div>
+
     <div class="equation">
       <img src="https://via.placeholder.com/70?text=A" alt="Image 1">
       <span class="symbol">+</span>
@@ -171,11 +179,23 @@
       <span class="question">?</span>
     </div>
 
-    <div class="embedded-watermark">
+    <!-- Multiple Watermark Instances -->
+    <div class="embedded-watermark watermark-1">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
       <a href="https://t.me/mathrushchannel" target="_blank">@MathRushChannel</a>
     </div>
-  </div>
-
-</body>
-</html>
+    <div class="embedded-watermark watermark-2">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+      <a href="https://t.me/mathrushchannel" target="_blank">@MathRushChannel</a>
+    </div>
+    <div class="embedded-watermark watermark-3">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+      <a href="https://t.me/mathrushchannel" target="_blank">@MathRushChannel</a>
+    </div>
+    <div class="embedded-watermark watermark-4">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+      <a href="https://t.me/mathrushchannel" target="_blank">@MathRushChannel</a>
+    </div>
+    <div class="embedded-watermark watermark-5">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+      <a
