--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
     .watermark-4 { bottom: 20px; left: 150px; }
     .watermark-5 { top: 65%; right: 30px; transform: translateY(-50%); }
     .watermark-6 { top: 85%; left: 100px; }
-
   </style>
 </head>
 <body>
@@ -175,32 +174,32 @@
       <span class="symbol">=</span>
       <span class="question">?</span>
     </div>
+  </div>
 
-    <div class="embedded-watermark watermark-1">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
-      <a href="https://t.me/mathrushchannel" target="_blank">@MathRushChannel</a>
-    </div>
-    <div class="embedded-watermark watermark-2">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
-      <a href="https://t.me/mathrushchannel" target="_blank">@MathRushChannel</a>
-    </div>
-    <div class="embedded-watermark watermark-3">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
-      <a href="https://t.me/mathrushchannel" target="_blank">@MathRushChannel</a>
-    </div>
-    <div class="embedded-watermark watermark-4">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
-      <a href="https://t.me/mathrushchannel" target="_blank">@MathRushChannel</a>
-    </div>
-    <div class="embedded-watermark watermark-5">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
-      <a href="https://t.me/mathrushchannel" target="_blank">@MathRushChannel</a>
-    </div>
-    <div class="embedded-watermark watermark-6">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
-      <a href="https://t.me/mathrushchannel" target="_blank">@MathRushChannel</a>
-    </div>
-
+  <!-- Watermarks -->
+  <div class="embedded-watermark watermark-1">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+    <a href="https://t.me/mathrushchannel" target="_blank">@MathRush Channel</a>
+  </div>
+  <div class="embedded-watermark watermark-2">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+    <a href="https://t.me/mathrushchannel" target="_blank">@MathRush Channel</a>
+  </div>
+  <div class="embedded-watermark watermark-3">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+    <a href="https://t.me/mathrushchannel" target="_blank">@MathRush Channel</a>
+  </div>
+  <div class="embedded-watermark watermark-4">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+    <a href="https://t.me/mathrushchannel" target="_blank">@MathRush Channel</a>
+  </div>
+  <div class="embedded-watermark watermark-5">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+    <a href="https://t.me/mathrushchannel" target="_blank">@MathRush Channel</a>
+  </div>
+  <div class="embedded-watermark watermark-6">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+    <a href="https://t.me/mathrushchannel" target="_blank">@MathRush Channel</a>
   </div>
 
 </body>
