--- a/index.html
+++ b/index.html
@@ -2,75 +2,205 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hero Equation</title>
+  <title>Logic Puzzle</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      background-color: #111;
-      color: #fff;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      margin: 0;
+      padding: 20px;
       text-align: center;
-      padding: 50px 20px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(45deg, #6a5acd, #ff6347, #32cd32, #00bfff);
+      background-size: 400% 400%;
+      animation: gradientBackground 10s ease infinite;
+      z-index: -1;
+    }
+
+    @keyframes gradientBackground {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .puzzle-container {
+      position: relative;
+      display: inline-block;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
     h1 {
-      font-size: 3em;
-      margin-bottom: 40px;
+      font-size: 2em;
+      margin-bottom: 30px;
     }
 
     .equation {
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
       align-items: center;
-      gap: 20px;
-      margin-bottom: 50px;
+      margin: 20px 0;
+      font-size: 1.2em;
+      flex-wrap: nowrap;
+      overflow-x: auto;
     }
 
     .equation img {
-      width: 150px;
-      height: auto;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
+      width: 50px;
+      height: 50px;
+      object-fit: cover;
+      margin: 0 5px;
+      border-radius: 6px;
     }
 
-    .symbol {
-      font-size: 3em;
+    .symbol, .question {
+      margin: 0 5px;
       font-weight: bold;
-      color: #0ff;
-      margin: 0 10px;
+      font-size: 1.5em;
     }
 
-    .footer {
-      margin-top: 50px;
-      font-size: 1.2em;
-      color: #aaa;
+    .question {
+      color: #d9534f;
     }
+
+    @media (min-width: 600px) {
+      .equation img {
+        width: 60px;
+        height: 60px;
+      }
+
+      .symbol, .question {
+        font-size: 1.8em;
+      }
+    }
+
+    @media (min-width: 900px) {
+      .equation img {
+        width: 70px;
+        height: 70px;
+      }
+
+      .symbol, .question {
+        font-size: 2em;
+      }
+    }
+
+    .embedded-watermark {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      background-color: rgba(255, 255, 255, 0.6);
+      padding: 4px 8px;
+      border-radius: 6px;
+      font-size: 0.85em;
+      opacity: 0.7;
+      z-index: 1000;
+      pointer-events: none;
+    }
+
+    .embedded-watermark img {
+      width: 18px;
+      height: 18px;
+      margin-right: 6px;
+    }
+
+    .embedded-watermark a {
+      color: #0088cc;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .embedded-watermark a:hover {
+      text-decoration: underline;
+    }
+
+    .watermark-1 { top: 10px; left: 20px; }
+    .watermark-2 { top: 150px; left: 80px; }
+    .watermark-3 { top: 50%; right: 20px; transform: translateY(-50%); }
+    .watermark-4 { bottom: 20px; left: 150px; }
+    .watermark-5 { top: 65%; right: 30px; transform: translateY(-50%); }
+    .watermark-6 { top: 85%; left: 100px; }
+
   </style>
 </head>
 <body>
 
-  <h1>The Equation of a Hero</h1>
+  <div class="background"></div>
 
-  <div class="equation">
-    <img src="https://imgs.search.brave.com/YxMqRy1RCTWol4mivhEgL4qmsgjKk-PLzDGjgVn0sDA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9teXRo/aWN0YWxlbnQuYi1j/ZG4ubmV0L2NyZWF0/b3JzL2Nhc2VvaC5w/bmc" alt="Image 1">
-    <span class="symbol">+</span>
-    <img src="https://imgs.search.brave.com/Zby37FNTh_hrIl0ffBIBOM6xl_RliM6VYq5ehdEx7K0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pMS5z/bmRjZG4uY29tL2Fy/dHdvcmtzLTlmVXpU/Z3J2T3czZDIwYnct/NFBYdmZnLXQxMDgw/eDEwODAuanBn" alt="Image 2">
-    <span class="symbol">=</span>
-    <img src="https://imgs.search.brave.com/EDwOlXNAhx3SfWJ0kspdnJIboiKStZNjmUqxDnY1kHA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/ZGV4ZXJ0by5jb20v/Y2RuLWltYWdlL3dw/LWNvbnRlbnQvdXBs/b2Fkcy8yMDI0LzEy/LzE4L2FkaW4tcm9z/cy1sZWF2ZXMta2lj/ay1pbmRlZmluaXRl/bHktdHdpdGNoLXJl/dHVybi0xMDI0eDU3/Ni5qcGc_d2lkdGg9/MTIwMCZxdWFsaXR5/PTc1JmZvcm1hdD1h/dXRv" alt="Image 3">
-  </div>
+  <div class="puzzle-container">
+    <h1>Can You Solve This?</h1>
 
-  <div class="equation">
-    <img src="https://imgs.search.brave.com/YxMqRy1RCTWol4mivhEgL4qmsgjKk-PLzDGjgVn0sDA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9teXRo/aWN0YWxlbnQuYi1j/ZG4ubmV0L2NyZWF0/b3JzL2Nhc2VvaC5w/bmc" alt="Image 1">
-    <span class="symbol">+</span>
-    <img src="https://imgs.search.brave.com/EDwOlXNAhx3SfWJ0kspdnJIboiKStZNjmUqxDnY1kHA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/ZGV4ZXJ0by5jb20v/Y2RuLWltYWdlL3dw/LWNvbnRlbnQvdXBs/b2Fkcy8yMDI0LzEy/LzE4L2FkaW4tcm9z/cy1sZWF2ZXMta2lj/ay1pbmRlZmluaXRl/bHktdHdpdGNoLXJl/dHVybi0xMDI0eDU3/Ni5qcGc_d2lkdGg9/MTIwMCZxdWFsaXR5/PTc1JmZvcm1hdD1h/dXRv" alt="Image 3">
-    <span class="symbol">+</span>
-    <img src="https://imgs.search.brave.com/Zby37FNTh_hrIl0ffBIBOM6xl_RliM6VYq5ehdEx7K0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pMS5z/bmRjZG4uY29tL2Fy/dHdvcmtzLTlmVXpU/Z3J2T3czZDIwYnct/NFBYdmZnLXQxMDgw/eDEwODAuanBn" alt="Image 2">
-    <span class="symbol">=</span>
-    <img src="https://imgs.search.brave.com/_1z2csq8Na-BklRtXLpSMyYtPzJE495cMdPbSMNqU8o/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly95dDMu/Z2dwaHQuY29tL09h/UTVEdHRsZ29MTDNt/dWdCNjI0RXBEcG1H/cHVUNlAwVFVXVXhf/MGtQQ0QzVkxhajRI/cTJqZnBjd3J2YUEy/ZHpPX2g0YV9lUHh3/PXM4MDAtYy1rLWMw/eDAwZmZmZmZmLW5v/LXJ3" alt="Image 4">
-  </div>
+    <div class="equation">
+      <img src="https://imgs.search.brave.com/YxMqRy1RCTWol4mivhEgL4qmsgjKk-PLzDGjgVn0sDA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9teXRo/aWN0YWxlbnQuYi1j/ZG4ubmV0L2NyZWF0/b3JzL2Nhc2VvaC5w/bmc" alt="Image 1">
+      <span class="symbol">+</span>
+      <img src="https://imgs.search.brave.com/Zby37FNTh_hrIl0ffBIBOM6xl_RliM6VYq5ehdEx7K0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pMS5z/bmRjZG4uY29tL2Fy/dHdvcmtzLTlmVXpU/Z3J2T3czZDIwYnct/NFBYdmZnLXQxMDgw/eDEwODAuanBn" alt="Image 2">
+      <span class="symbol">=</span>
+      <img src="https://imgs.search.brave.com/EDwOlXNAhx3SfWJ0kspdnJIboiKStZNjmUqxDnY1kHA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/ZGV4ZXJ0by5jb20v/Y2RuLWltYWdlL3dw/LWNvbnRlbnQvdXBs/b2Fkcy8yMDI0LzEy/LzE4L2FkaW4tcm9z/cy1sZWF2ZXMta2lj/ay1pbmRlZmluaXRl/bHktdHdpdGNoLXJl/dHVybi0xMDI0eDU3/Ni5qcGc_d2lkdGg9/MTIwMCZxdWFsaXR5/PTc1JmZvcm1hdD1h/dXRv" alt="Image 3">
+    </div>
 
-  <div class="footer">
-    Sometimes, greatness is a formula.
+    <div class="equation">
+      <img src="https://imgs.search.brave.com/YxMqRy1RCTWol4mivhEgL4qmsgjKk-PLzDGjgVn0sDA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9teXRo/aWN0YWxlbnQuYi1j/ZG4ubmV0L2NyZWF0/b3JzL2Nhc2VvaC5w/bmc" alt="Image 1">
+      <span class="symbol">+</span>
+      <img src="https://imgs.search.brave.com/EDwOlXNAhx3SfWJ0kspdnJIboiKStZNjmUqxDnY1kHA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/ZGV4ZXJ0by5jb20v/Y2RuLWltYWdlL3dw/LWNvbnRlbnQvdXBs/b2Fkcy8yMDI0LzEy/LzE4L2FkaW4tcm9z/cy1sZWF2ZXMta2lj/ay1pbmRlZmluaXRl/bHktdHdpdGNoLXJl/dHVybi0xMDI0eDU3/Ni5qcGc_d2lkdGg9/MTIwMCZxdWFsaXR5/PTc1JmZvcm1hdD1h/dXRv" alt="Image 3">
+      <span class="symbol">+</span>
+      <img src="https://imgs.search.brave.com/Zby37FNTh_hrIl0ffBIBOM6xl_RliM6VYq5ehdEx7K0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pMS5z/bmRjZG4uY29tL2Fy/dHdvcmtzLTlmVXpU/Z3J2T3czZDIwYnct/NFBYdmZnLXQxMDgw/eDEwODAuanBn" alt="Image 2">
+      <span class="symbol">=</span>
+      <img src="https://imgs.search.brave.com/_1z2csq8Na-BklRtXLpSMyYtPzJE495cMdPbSMNqU8o/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly95dDMu/Z2dwaHQuY29tL09h/UTVEdHRsZ29MTDNt/dWdCNjI0RXBEcG1H/cHVUNlAwVFVXVXhf/MGtQQ0QzVkxhajRI/cTJqZnBjd3J2YUEy/ZHpPX2g0YV9lUHh3/PXM4MDAtYy1rLWMw/eDAwZmZmZmZmLW5v/LXJ3" alt="Image 4">
+    </div>
+
+    <div class="equation">
+      <img src="https://imgs.search.brave.com/_1z2csq8Na-BklRtXLpSMyYtPzJE495cMdPbSMNqU8o/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly95dDMu/Z2dwaHQuY29tL09h/UTVEdHRsZ29MTDNt/dWdCNjI0RXBEcG1H/cHVUNlAwVFVXVXhf/MGtQQ0QzVkxhajRI/cTJqZnBjd3J2YUEy/ZHpPX2g0YV9lUHh3/PXM4MDAtYy1rLWMw/eDAwZmZmZmZmLW5v/LXJ3" alt="Image 4">
+      <span class="symbol">+</span>
+      <img src="https://imgs.search.brave.com/Zby37FNTh_hrIl0ffBIBOM6xl_RliM6VYq5ehdEx7K0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pMS5z/bmRjZG4uY29tL2Fy/dHdvcmtzLTlmVXpU/Z3J2T3czZDIwYnct/NFBYdmZnLXQxMDgw/eDEwODAuanBn" alt="Image 2">
+      <span class="symbol">+</span>
+      <img src="https://imgs.search.brave.com/YxMqRy1RCTWol4mivhEgL4qmsgjKk-PLzDGjgVn0sDA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9teXRo/aWN0YWxlbnQuYi1j/ZG4ubmV0L2NyZWF0/b3JzL2Nhc2VvaC5w/bmc" alt="Image 1">
+      <span class="symbol">+</span>
+      <img src="https://imgs.search.brave.com/EDwOlXNAhx3SfWJ0kspdnJIboiKStZNjmUqxDnY1kHA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/ZGV4ZXJ0by5jb20v/Y2RuLWltYWdlL3dw/LWNvbnRlbnQvdXBs/b2Fkcy8yMDI0LzEy/LzE4L2FkaW4tcm9z/cy1sZWF2ZXMta2lj/ay1pbmRlZmluaXRl/bHktdHdpdGNoLXJl/dHVybi0xMDI0eDU3/Ni5qcGc_d2lkdGg9/MTIwMCZxdWFsaXR5/PTc1JmZvcm1hdD1h/dXRv" alt="Image 3">
+      <span class="symbol">=</span>
+      <span class="question">?</span>
+    </div>
+
+    <div class="embedded-watermark watermark-1">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+      <a href="https://t.me/mathrushchannel" target="_blank">@MathRush Channel</a>
+    </div>
+    <div class="embedded-watermark watermark-2">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+      <a href="https://t.me/mathrushchannel" target="_blank">@MathRush Channel</a>
+    </div>
+    <div class="embedded-watermark watermark-3">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+      <a href="https://t.me/mathrushchannel" target="_blank">@MathRush Channel</a>
+    </div>
+    <div class="embedded-watermark watermark-4">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+      <a href="https://t.me/mathrushchannel" target="_blank">@MathRush Channel</a>
+    </div>
+    <div class="embedded-watermark watermark-5">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+      <a href="https://t.me/mathrushchannel" target="_blank">@MathRush Channel</a>
+    </div>
+    <div class="embedded-watermark watermark-6">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQckNrJPjVYRo6s7rjnaFLZ611q4466C-3JqQ&s" alt="Telegram Logo">
+      <a href="https://t.me/mathrushchannel" target="_blank">@MathRush Channel</a>
+    </div>
+
   </div>
 
 </body>
