--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <span class="symbol">+</span>
   <img src="https://imgs.search.brave.com/Zm6WdJ1rc4jzDHnfPM--Is9R6d5vtjP-lYcq231I8g0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5nZXR0eWltYWdl/cy5jb20vaWQvMTQw/NjMyOTY3My9waG90/by9sb25kb24tZW5n/bGFuZC1jaHJpcy1i/cm93bi1wZXJmb3Jt/cy1hdC10aGUtbWFp/bi1zdGFnZS1kdXJp/bmctZGF5LTEtb2Yt/d2lyZWxlc3MtZmVz/dGl2YWwtMjAyMi5q/cGc_cz02MTJ4NjEy/Jnc9MCZrPTIwJmM9/RldhaTlQazRfOGR1/d2UzM2JVbk9SRC1U/a01wWUNLVjlaOEtz/UURIVlVfbz0" alt="Image 2">
   <span class="symbol">=</span>
-  <span class="question">?</span>
+  <img src="https://imgs.search.brave.com/dWboY_RfemPniV1-_u1vUdBCEmTWbDpkd5yqxfNeA0k/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly92YXJp/ZXR5LmNvbS93cC1j/b250ZW50L3VwbG9h/ZHMvMjAyNS8wMi9N/aXhDb2xsYWdlLTEy/LUZlYi0yMDI1LTA0/LTQ2LVBNLTg4MzMu/anBnP3c9MTAwMCZo/PTY2NyZjcm9wPTE" alt="Image 4">
 </div>
 
 <div class="equation">
